--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: matheusnicolay/kube-news:v1
+        image: matheusnicolay/kube-news:{{TAG}}
         ports:
         - containerPort: 8080
         env:
