--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -74,9 +74,9 @@ spec:
   selector:
     app: web
   ports: 
-    - port: 8080
+    - port: 80
       targetPort: 8080
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
 
 ---
