--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -42,6 +42,7 @@ kind: Deployment
 metadata:
   name: web
 spec:
+  replicas: 5
   selector:
     matchLabels:
       app: web
@@ -49,6 +50,10 @@ spec:
     metadata:
       labels:
         app: web
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: web
